# CounselIQ

./: .env.example  .gitignore  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/: BRANCH_PROTECTION.md  SECRETS.md  pull_request_template.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2cb61514cf94_add_notes_to_risk_flags.py  3fe9020a97ed_initial_schema.py  9733ec2602b3_change_vector_dims_to_384.py  d880f1a1399b_add_invitations_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  drafter.py  extractor.py  orchestrator.py  researcher.py  risk_scorer.py  state.py  synthesiser.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: analysis.py  auth.py  documents.py  invitations.py  regulatory.py  reviews.py  users.py  websocket.py
backend/app/db/: __init__.py  session.py
backend/app/middleware/: __init__.py  rate_limit.py  request_id.py
backend/app/models/: __init__.py  analysis_job.py  audit_log.py  base.py  clause.py  document.py  invitation.py  organisation.py  regulatory_update.py  review.py  risk_flag.py  user.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  document.py  invitation.py  organisation.py  regulatory.py  review.py  user.py
backend/app/services/: __init__.py  audit.py  embeddings.py  events.py  invitation.py  redis_subscriber.py  regulatory.py  review.py  storage.py  textract.py  websocket_manager.py
backend/app/tasks/: __init__.py  analysis.py  celery_app.py  embeddings.py  extraction.py  invitations.py  maintenance.py
backend/app/utils/: __init__.py  llm.py  logging.py  security.py
backend/scripts/: __init__.py  seed_regulatory_updates.py
backend/tests/: __init__.py  conftest.py  test_agents.py  test_auth.py  test_documents.py  test_health.py  test_invitations.py  test_maintenance.py  test_models.py  test_rate_limit.py  test_regulatory.py  test_reviews.py  test_websocket.py
frontend/: .dockerignore  .env.example  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/: middleware.ts  test-setup.ts
infra/: COST_ESTIMATE.md  README.md
infra/scripts/: deploy.sh  teardown.sh
infra/terraform/: .gitignore  acm.tf  alb.tf  ecr.tf  ecs.tf  elasticache.tf  (+10 more)
scripts/: init-pgvector.sql  setup_localstack.sh
(+56 files in other folders)
