[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "counseliq-backend"
version = "0.1.0"
description = "CounselIQ — legal compliance multi-agent AI platform (backend)"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "CounselIQ" }]

dependencies = [
    "fastapi>=0.111",
    "python-docx>=1.1",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    # SQLAlchemy's async engine requires greenlet; declare it explicitly so it is
    # never dropped by a resolver that treats it as a conditional dependency.
    "greenlet>=3.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "pgvector>=0.3",
    "celery[redis]>=5.4",
    "redis>=5.0",
    "boto3>=1.34",
    "anthropic>=0.28",
    "langgraph>=0.2",
    "langchain-anthropic>=0.1",
    "langchain-community>=0.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.x is incompatible with bcrypt >= 4.1 (detect_wrap_bug crash).
    "bcrypt>=4.0,<4.1",
    "email-validator>=2.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "faker>=25.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "watchdog>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI dependency-injection markers are evaluated once at startup; the B008
# "function call in default argument" warning is a false positive for them.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.Form",
    "fastapi.File",
    "fastapi.Security",
]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
